--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,5 +1,3 @@
-
-
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/OpenWorld
 
@@ -34,19 +32,12 @@ SoundCueCookQualityIndex=-1
 
 [/Script/Engine.RendererSettings]
 r.Mobile.EnableNoPrecomputedLightingCSMShader=True
-
 r.GenerateMeshDistanceFields=True
-
 r.DynamicGlobalIlluminationMethod=1
-
 r.ReflectionMethod=1
-
 r.Shadow.Virtual.Enable=1
-
 r.DefaultFeature.AutoExposure.ExtendDefaultLuminanceRange=True
-
 r.DefaultFeature.LocalExposure.HighlightContrastScale=0.8
-
 r.DefaultFeature.LocalExposure.ShadowContrastScale=0.8
 
 [/Script/LinuxTargetPlatform.LinuxTargetSettings]
@@ -85,3 +76,16 @@ ConnectionType=USBOnly
 bUseManualIPAddress=False
 ManualIPAddress=
 
+[/Script/Engine.GameEngine]
++NetDriverDefinitions=(DefName="GameNetDriver",DriverClassName="OnlineSubsystemSteam.SteamNetDriver",DriverClassNameFallback="OnlineSubsystemUtils.IpNetDriver")
+
+[OnlineSubsystem]
+DefaultPlatformService=Steam
+
+[OnlineSubsystemSteam]
+bEnabled=true
+SteamDevAppId=480
+bInitServerOnClient=true
+ 
+[/Script/OnlineSubsystemSteam.SteamNetDriver]
+NetConnectionClassName="OnlineSubsystemSteam.SteamNetConnection"
