WIP basic session functions day 8

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6E81F0DC4E89947C920D969D9E215FDF
+ProjectName=Library of Knowledge
+CopyrightNotice=
+
