--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Maps/MainMenuMap.MainMenuMap
-EditorStartupMap=/Game/Maps/MainMenuMap.MainMenuMap
+GameDefaultMap=/Game/Maps/BasicMap.BasicMap
+EditorStartupMap=/Game/Maps/BasicMap.BasicMap
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
